--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -18,7 +18,7 @@ management:
             enabled: false # When using the MailService, configure an SMTP server and set this to true
 spring:
     application:
-        name: plendo
+        name: maintacloud
     profiles:
         active: dev
     jackson:
