Update pom.xml file

--- a/pom.xml
+++ b/pom.xml
@@ -331,7 +331,7 @@
 
     </dependencies>
     <build>
-        <defaultGoal>spring-boot:run</defaultGoal>
+        <!--<defaultGoal>spring-boot:run</defaultGoal> -->
 
         <testResources>
             <testResource>
